Fixed a minor bug with button groups that made them change widths when selected, causing all surrounding buttons to shift position slightly.

--- a/Css/viper_tools.less
+++ b/Css/viper_tools.less
@@ -99,11 +99,14 @@
     border-left: 1px solid #898989;
 }
 
-.themeDark .Viper-buttonGroup .Viper-button:first-child,
+.themeDark .Viper-buttonGroup .Viper-button:first-child {
+    border-left: none;
+}
+
 .themeDark .Viper-buttonGroup .Viper-button.active,
 .themeDark .Viper-buttonGroup .Viper-button.selected,
 .themeDark .Viper-buttonGroup .Viper-button.disabled:first-child:hover {
-    border-left: none;
+    border-left-color: #38373c;
 }
 
 /* Theme - Light Grey */
